Highlight today and fix datepicker position on mobile.

--- a/client/app/thermo/components/thermo-config-modal/thermo-config-modal.component.scss
+++ b/client/app/thermo/components/thermo-config-modal/thermo-config-modal.component.scss
@@ -115,3 +115,9 @@
 		}
 	}
 }
+
+::ng-deep .custom-today-class {
+	border: 1px solid $mint;
+	border-radius: 50%;
+	background-color: $light-gray;
+}
